# CLIC

./: CMakeLists.txt  README.md  data_holders.h  genetic.h  gif.jl  main.cpp  new_case.h  simulation.h  transfer.h  transformation.h
